# atcoder

./: .gitignore  Pipfile  README.md  pyproject.toml
config/: atcodertools.toml  custom_template.cpp
contests/abc040/A/: main.cpp
contests/abc040/B/: main.cpp
contests/abc040/C/: main.cpp
contests/abc079/A/: main.cpp
contests/abc079/B/: main.cpp
contests/abc079/C/: main.cpp
contests/abc079/D/: main.cpp
contests/abc080/A/: main.cpp
contests/abc080/B/: main.cpp
contests/abc080/C/: main.cpp
contests/abc080/D/: in_4.txt  main.cpp
contests/abc081/A/: main.cpp
contests/abc081/B/: main.cpp
contests/abc081/C/: main.cpp
contests/abc081/D/: main.cpp
contests/abc082/A/: main.cpp
contests/abc082/B/: main.cpp
contests/abc082/C/: main.cpp
contests/abc082/D/: main.cpp
contests/abc083/A/: main.cpp
contests/abc083/B/: main.cpp
contests/abc083/C/: main.cpp
contests/abc083/D/: main.cpp
contests/abc084/A/: main.cpp
contests/abc084/B/: main.cpp
contests/abc084/C/: main.cpp
contests/abc084/D/: main.cpp
contests/abc085/A/: main.cpp
contests/abc085/B/: main.cpp
contests/abc085/C/: main.cpp  out_3.txt
contests/abc085/D/: main.cpp
contests/abc086/A/: main.cpp
contests/abc086/B/: main.cpp
contests/abc086/C/: main.cpp
contests/abc086/D/: main.cpp
contests/abc129/A/: main.cpp
contests/abc129/B/: main.cpp
contests/abc129/C/: main.cpp
contests/abc129/D/: main.cpp
contests/dp/A/: main.cpp
contests/dp/B/: main.cpp
contests/dp/C/: main.cpp
scripts/: config.sh
scripts/command/: submit.sh  test.sh
(+6 files in other folders)
